--- a/index.html
+++ b/index.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
-<!--[if lt IE 9 ]><html class="no-js oldie" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
+
 <html class="no-js" lang="en">
-<!--<![endif]-->
 
 <head>
 
-    <!--- basic page needs
-   ================================================== -->
     <meta charset="utf-8">
     <title>Togethrust</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- mobile specific metas
-   ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS
-   ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- script
-   ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    <!-- favicons
-	================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -38,33 +25,6 @@
 
 <body id="top">
 
-    <!-- header
-   ================================================== -->
-   <!-- <header id="header" class="row">
-
-   		<div class="header-logo">
-	        <a href="index.html">Dazzle</a>
-	    </div>
-
-	   	<nav id="header-nav-wrap">
-			<ul class="header-main-nav">
-				<li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-				<li><a class="smoothscroll"  href="#pricing" title="pricing">Pricing</a></li>
-				<li><a class="smoothscroll"  href="#testimonials" title="testimonials">Testimonials</a></li>
-				<li><a class="smoothscroll"  href="#download" title="download">Download</a></li>
-			</ul>
-
-            <a href="#" title="sign-up" class="button button-primary cta">Sign Up</a>
-		</nav>
-
-		<a class="header-menu-toggle" href="#"><span>Menu</span></a>
-
-   </header> <!-- /header -->
-
-
-   <!-- home
-   ================================================== -->
    <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
 
         <div class="overlay"></div>
@@ -75,33 +35,34 @@
 
                     <h3 data-aos="fade-up"></h3>
 
+
                     <h1 data-aos="fade-up">
                         La Solution pour se  <br>
                         financer ensemble, <br>
                         en toute confiance.
                     </h1>
 
-                    <div class="buttons" data-aos="fade-up">
-                        <a href="#download" class="smoothscroll button stroke">
-                            <span class="icon-circle-down" aria-hidden="true"></span>
-                            Download App
-                        </a>
-                        <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
-                            <span class="icon-play" aria-hidden="true"></span>
-                            Watch Video
-                        </a>
+                    <div class="home-content footer-subscribe">
+
+                        <h4 style="color: white;">Soyez informé lors de notre lancement</h4>
+
+                        <div class="subscribe-form">
+
+                            <form id="mc-form" class="group" novalidate="true">
+
+                                <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Adresse Email" style="color:white !important;" required="">
+
+                                <input type="submit" name="subscribe" value="ENVOYER">
+
+                                <label for="mc-email" class="subscribe-message"></label>
+
+                            </form>
+
+                        </div>
+
                     </div>
-
-                </div>
-
-                <div class="home-image-right">
-                    <img src="images/iphone-app-470.png"
-                        srcset="images/iphone-app-470.png 1x, images/iphone-app-940.png 2x"
-                        data-aos="fade-up">
-                </div>
             </div>
-
-        </div> <!-- end home-content -->
+        </div>
 
         <ul class="home-social-list">
             <li>
@@ -114,41 +75,19 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-email"></i></a>
+                <a href="mailto:ngoma.tamio@gmail.com?Subject=Bonjour%20Togethrust" target="_blank"><i class="fa fa-envelope"></i></a>
             </li>
         </ul>
-        <!-- end home-social-list -->
 
+    </section>
 
+    <section id="about" style="margin-bottom:-300px;">
 
-    </section> <!-- end home -->
+        <div class="row about-features" >
 
+            <div class="features-list block-1-3 block-m-1-2 block-mob-full group" style="margin-top:-150px;">
 
-    <!-- about
-    ================================================== -->
-    <section id="about">
-
-        <div class="row about-intro">
-
-            <div class="col-four">
-                <h1 class="intro-header" data-aos="fade-up">About Our App</h1>
-            </div>
-            <div class="col-eight">
-                <p class="lead" data-aos="fade-up">
-                    Excepteur enim magna veniam labore veniam sint. Ex aliqua esse proident ullamco voluptate. Nisi nisi nisi aliqua eiusmod dolor dolor proident deserunt occaecat elit Lorem reprehenderit. Id culpa veniam ex aliqua magna elit pariatur do nulla. Excepteur enim magna veniam labore veniam sint.
-                </p>
-            </div>
-
-        </div>
-
-        <div class="row about-features">
-
-            <div class="features-list block-1-3 block-m-1-2 block-mob-full group">
-
-                <div class="bgrid feature" data-aos="fade-up">
+                <div class="bgrid feature" data-aos="fade-up" >
 
                     <span class="icon"><i class="icon-window"></i></span>
 
@@ -173,9 +112,7 @@
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
                         </p>
 
-
                     </div>
-
                 </div> <!-- /bgrid -->
 
                 <div class="bgrid feature" data-aos="fade-up">
@@ -192,134 +129,12 @@
 
                 </div> <!-- /bgrid -->
 
-                    <div class="bgrid feature" data-aos="fade-up">
 
-                        <span class="icon"><i class="icon-file"></i></span>
-
-                    <div class="service-content">
-                        <h3>Clean Code</h3>
-
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                        </p>
-
-                    </div>
-
-                    </div> <!-- /bgrid -->
-
-                <div class="bgrid feature" data-aos="fade-up">
-
-                    <span class="icon"><i class="icon-sliders"></i></span>
-
-                    <div class="service-content">
-                        <h3>Easy To Customize</h3>
-
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                        </p>
-                    </div>
-
-                </div> <!-- /bgrid -->
-
-                <div class="bgrid feature" data-aos="fade-up">
-
-                    <span class="icon"><i class="icon-gift"></i></span>
-
-                    <div class="service-content">
-                        <h3>Free of Charge</h3>
-
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                        </p>
-
-                    </div>
-
-                </div> <!-- /bgrid -->
 
             </div> <!-- end features-list -->
 
         </div> <!-- end about-features -->
 
-
-
-    <!-- footer
-    ================================================== -->
-    <footer>
-
-        <div class="footer-main">
-            <div class="row">
-
-                <div class="col-three md-1-3 tab-full footer-info">
-
-                    <div class="footer-logo"></div>
-
-                    <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
-                    </p>
-
-                    <ul class="footer-social-list">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook-square"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </li>
-                    </ul>
-
-
-                </div> <!-- end footer-info -->
-
-
-                <div class="col-four md-1-2 tab-full footer-subscribe">
-
-                    <h4>Our Newsletter</h4>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-                    <div class="subscribe-form">
-
-                        <form id="mc-form" class="group" novalidate="true">
-
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-
-                            <input type="submit" name="subscribe" value="Send">
-
-                            <label for="mc-email" class="subscribe-message"></label>
-
-                        </form>
-
-                    </div>
-
-                </div> <!-- end footer-subscribe -->
-
-            </div> <!-- /row -->
-        </div> <!-- end footer-main -->
-
-
-      <div class="footer-bottom">
-
-      	<div class="row">
-
-      		<div class="col-twelve">
-	      		<div class="copyright">
-		         	<span></span>
-		         	<span></a></span>
-		         </div>
-
-		     
-	      	</div>
-
-      	</div> <!-- end footer-bottom -->
-
-      </div>
-
-    </footer>
 
     <div id="preloader">
     	<div id="loader"></div>
