--- a/index.html
+++ b/index.html
@@ -65,12 +65,7 @@
         </div>
 
         <ul class="home-social-list">
-            <li>
-                <a href="#"><i class="fa fa-facebook-square"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
+
             <li>
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </li>
@@ -81,53 +76,77 @@
 
     </section>
 
-    <section id="about" style="margin-bottom:-300px;">
+
+    <section id="about" style="margin-bottom:-200px;">
+
+      <div style="margin-bottom: 150px; margin-top:-100px;">
+        <h1 style="text-align: center;"> Comment ça marche ?</h1>
+      </div>
 
         <div class="row about-features" >
 
-            <div class="features-list block-1-3 block-m-1-2 block-mob-full group" style="margin-top:-150px;">
 
-                <div class="bgrid feature" data-aos="fade-up" >
+            <div class="features-list block-1-4 block-m-1-2 block-mob-full group" style="margin-top:-150px; width:140%;">
 
-                    <span class="icon"><i class="icon-window"></i></span>
+                <div class="bgrid feature" data-aos="fade-up"  style="margin-right:-8%;">
 
-                    <div class="service-content">
+                    <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone1.svg"></span>
 
-                        <h3>Fully Resposive</h3>
+                    <div class="service-content" style="max-width: 250px;">
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <h3 style="text-align: center;"> JE CRÉE</h3>
+
+                        <p style="text-align: center;margin-top:-20px;">Je crée et personnalise <br> ma tirelire selon mes besoins.
                         </p>
 
                     </div>
 
                     </div> <!-- /bgrid -->
 
-                    <div class="bgrid feature" data-aos="fade-up">
+                    <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
 
-                        <span class="icon"><i class="icon-image"></i></span>
+                      <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone2.svg"></span>
 
-                    <div class="service-content">
-                        <h3>Retina Ready</h3>
+                      <div class="service-content" style="max-width: 250px;">
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                          <h3 style="text-align: center;"> J'INVITE</h3>
+
+                          <p style="text-align: center;margin-top:-20px;">J'invite des amis <br> qui approuvent la configuration.
+                          </p>
+
+                      </div>
+
+                </div> <!-- /bgrid -->
+
+                <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
+
+                    <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone3.svg"></span>
+
+                    <div class="service-content" style="max-width: 250px;">
+
+                        <h3 style="text-align: center;"> ON COTISE</h3>
+
+                        <p style="text-align: center;margin-top:-20px;">Chacun contribue <br> le montant convenu.
                         </p>
 
                     </div>
                 </div> <!-- /bgrid -->
 
-                <div class="bgrid feature" data-aos="fade-up">
+                <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
 
-                    <span class="icon"><i class="icon-paint-brush"></i></span>
+                    <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone4.svg"></span>
 
-                    <div class="service-content">
-                        <h3>Stylish Design</h3>
+                    <div class="service-content" style="max-width: 250px;">
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <h3 style="text-align: center;"> ON DISTRIBUE</h3>
+
+                        <p style="text-align: center;margin-top:-20px;">L'argent est redistribué <br> à tour de rôle.
                         </p>
 
                     </div>
-
                 </div> <!-- /bgrid -->
+
+
 
 
 
