section ils nous font confiance

--- a/index.html
+++ b/index.html
@@ -28,19 +28,28 @@
    <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
 
         <div class="overlay"></div>
+
         <div class="home-content">
 
+          <div class=""> <img src="images/logo.svg" style="width:23%; margin-left:11%; margin-right:40%; margin-top:5%;"></div>
+
             <div class="row contents">
-                <div class="home-content-left">
+                <div class="home-content-left" style="margin-top:-5%;">
 
                     <h3 data-aos="fade-up"></h3>
 
 
                     <h1 data-aos="fade-up">
-                        La Solution pour se  <br>
+                        <br>La Solution pour se  <br>
                         financer ensemble, <br>
                         en toute confiance.
                     </h1>
+
+                    <div class="home-image-right" style="margin-right:30%; margin-left:60%; margin-top:10%; width:70%;">
+                        <img src="images/iphone-app-470.png"
+                            srcset="images/iphone-app-470.png 1x, images/iphone-app-940.png 2x"
+                            data-aos="fade-up">
+                    </div>
 
                     <div class="home-content footer-subscribe">
 
@@ -61,6 +70,8 @@
                         </div>
 
                     </div>
+
+
             </div>
         </div>
 
@@ -77,14 +88,13 @@
     </section>
 
 
-    <section id="about" style="margin-bottom:-200px;">
+    <section id="about" style="">
 
       <div style="margin-bottom: 150px; margin-top:-100px;">
         <h1 style="text-align: center;"> Comment ça marche ?</h1>
       </div>
 
         <div class="row about-features" >
-
 
             <div class="features-list block-1-4 block-m-1-2 block-mob-full group" style="margin-top:-150px; width:140%;">
 
@@ -144,16 +154,58 @@
                         </p>
 
                     </div>
-                </div> <!-- /bgrid -->
+                </div>
+            </div>
+        </div>
+
+      <section id="confiance">
 
 
+        <div style="background:white;">
 
 
+          <div class="row about-features" >
 
-            </div> <!-- end features-list -->
 
-        </div> <!-- end about-features -->
+                    <div style="padding-top:30px;">
+                      <h1 style="text-align: center;"> Ils nous font confiance : </h1>
+                    </div>
 
+              <div class="features-list block-1-3 block-m-1-2 block-mob-full group" style=" width:120%; margin-top:-6%;">
+
+                  <div class="bgrid feature" data-aos="fade-up"  style="margin-right:-8%;">
+
+                      <span class="icon" style="margin-left:25%; width:120%; margin-right:40%;"> <br/> <a href="https://finance-innovation.org/" target="_blank"/> <img src="images/conf1.svg" > </span>
+
+                      <div class="service-content" style="max-width: 250px;">
+
+                      </div>
+
+                      </div> <!-- /bgrid -->
+
+                      <div class="bgrid feature" data-aos="fade-up" style="margin-right:-13%; margin-left:5%;">
+
+                        <span class="icon" style="margin-left:25%; margin-right:30%;"> <a href="http://www.escpeurope.eu/home-escp-europe" target="_blank"/> <img src="images/conf2.svg">   </span>
+
+                        <div class="service-content" style="max-width: 250px;">
+
+                        </div>
+
+                  </div>
+
+                  <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
+
+                      <span class="icon" style="margin-left:25%; margin-right:30%;"> <a href="https://www.blue-factory.eu/" target="_blank"/> <img src="images/conf3.svg" >  </span>
+
+                      <div class="service-content" style="max-width: 250px;">
+
+
+                      </div>
+                  </div>
+              </div>
+        </div>
+
+      </section>
 
     <div id="preloader">
     	<div id="loader"></div>
