--- a/index.html
+++ b/index.html
@@ -4,211 +4,197 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <title>Togethrust</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <title>Togethrust</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/vendor.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
+  <script src="js/modernizr.js"></script>
+  <script src="js/pace.min.js"></script>
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
 <body id="top">
 
-   <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
+  <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
 
-        <div class="overlay"></div>
+    <div class="overlay"></div>
 
-        <div class="home-content">
+    <div class="home-content">
+      
+      <div class="title-logo"> <img src="images/logo.svg" style="width:23%; margin-left:11%; margin-right:40%; margin-top:5%;"></div>
 
-          <div class=""> <img src="images/logo.svg" style="width:23%; margin-left:11%; margin-right:40%; margin-top:5%;"></div>
+      <div class="row contents">
+        <div class="home-content-left" style="margin-top:-5%;">
 
-            <div class="row contents">
-                <div class="home-content-left" style="margin-top:-5%;">
-
-                    <h3 data-aos="fade-up"></h3>
+          <h3 data-aos="fade-up"></h3>
 
 
-                    <h1 data-aos="fade-up">
+          <h1 data-aos="fade-up">
                         <br>La Solution pour se  <br>
                         financer ensemble, <br>
                         en toute confiance.
                     </h1>
 
-                    <div class="home-image-right" style="margin-right:30%; margin-left:60%; margin-top:10%; width:70%;">
-                        <img src="images/iphone-app-470.png"
-                            srcset="images/iphone-app-470.png 1x, images/iphone-app-940.png 2x"
-                            data-aos="fade-up">
-                    </div>
+          <div class="home-image-right" style="margin-right:30%; margin-left:60%; margin-top:10%; width:70%;">
+            <img src="images/iphone-app-470.png" srcset="images/iphone-app-470.png 1x, images/iphone-app-940.png 2x" data-aos="fade-up">
+          </div>
 
-                    <div class="home-content footer-subscribe">
 
-                        <h4 style="color: white;">Soyez informé lors de notre lancement</h4>
+          <div class="home-content footer-subscribe">
 
-                        <div class="subscribe-form">
+            <h4 style="color: white;">Soyez informé lors de notre lancement</h4>
 
-                            <form id="mc-form" class="group" novalidate="true">
+            <div class="subscribe-form">
 
-                                <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Adresse Email" style="color:white !important;" required="">
+              <form id="mc-form" class="group" novalidate="true">
 
-                                <input type="submit" name="subscribe" value="ENVOYER">
+                <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Adresse Email" style="color:white !important;" required="">
 
-                                <label for="mc-email" class="subscribe-message"></label>
+                <input type="submit" name="subscribe" value="ENVOYER">
 
-                            </form>
+                <label for="mc-email" class="subscribe-message"></label>
 
-                        </div>
-
-                    </div>
-
+              </form>
 
             </div>
+
+          </div>
+
+
+        </div>
+      </div>
+
+      <ul class="home-social-list">
+
+        <li>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href="mailto:ngoma.tamio@gmail.com?Subject=Bonjour%20Togethrust" target="_blank"><i class="fa fa-envelope"></i></a>
+        </li>
+      </ul>
+
+  </section>
+
+
+  <section id="about" style="">
+
+    <div style="margin-bottom: 150px; margin-top:-100px;">
+      <h1 style="text-align: center;"> Comment ça marche ?</h1>
+    </div>
+
+    <div class="row about-features">
+
+      <div class="features-list block-1-4 block-m-1-2 block-mob-full group" style="margin-top:-150px; width:140%;">
+
+        <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
+
+          <div class="service-content" style="max-width: 250px;">
+            <div style="text-align:center;"><img src="images/icone1.svg">
+              <h3 style="text-align: center;"> JE CRÉE</h3>
+
+              <p style="text-align: center;margin-top:-20px;">Je crée et personnalise <br> ma tirelire selon mes besoins.
+              </p>
+            </div>
+          </div>
+
         </div>
 
-        <ul class="home-social-list">
+        <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
 
-            <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="mailto:ngoma.tamio@gmail.com?Subject=Bonjour%20Togethrust" target="_blank"><i class="fa fa-envelope"></i></a>
-            </li>
-        </ul>
+          <div class="service-content" style="max-width: 250px;">
+            <div style="text-align:center;"><img src="images/icone2.svg">
+
+              <h3 style="text-align: center;"> J'INVITE</h3>
+
+              <p style="text-align: center;margin-top:-20px;">J'invite des amis <br> qui approuvent la configuration.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
+
+          <div class="service-content" style="max-width: 250px;">
+            <div style="text-align:center;"><img src="images/icone3.svg">
+
+              <h3 style="text-align: center;"> ON COTISE</h3>
+              <p style="text-align: center;margin-top:-20px;">Chacun contribue <br> le montant convenu.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
+
+          <div class="service-content" style="max-width: 250px;">
+            <div style="text-align:center;"><img src="images/icone4.svg">
+
+              <h3 style="text-align: center;"> ON DISTRIBUE</h3>
+
+              <p style="text-align: center;margin-top:-20px;">L'argent est redistribué <br> à tour de rôle.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section id="confiance">
+
+
+      <div style="background:white;">
+
+
+        <div class="row about-features">
+
+
+          <div style="padding-top:30px;">
+            <h1 style="text-align: center;"> Ils nous font confiance : </h1>
+          </div>
+
+          <div class="features-list block-1-3 block-m-1-2 block-mob-full group" style=" width:100%; margin-top:-3%; text-align:center;">
+
+            <div class="bgrid feature" data-aos="fade-up">
+              <div class="service-content" style="max-width: 250px;">
+                <div style="text-align:center;"> <a href="https://finance-innovation.org/" target="_blank"/> <img src="images/conf1.svg"> </div>
+              </div>
+
+            </div>
+
+            <div class="bgrid feature" data-aos="fade-up" >
+              <div class="service-content" style="max-width: 250px;">
+                <div style="text-align:center;"> <a href="http://www.escpeurope.eu/home-escp-europe" target="_blank"/><img src="images/conf2.svg"> </div>
+
+              </div>
+
+            </div>
+
+            <div class="bgrid feature" data-aos="fade-up">
+              <div class="service-content" style="max-width: 250px;">
+                <div style="text-align:center;"> <a href="https://www.blue-factory.eu/" target="_blank"/> <img src="images/conf3.svg"> </div>
+
+
+              </div>
+            </div>
+          </div>
+        </div>
 
     </section>
 
-
-    <section id="about" style="">
-
-      <div style="margin-bottom: 150px; margin-top:-100px;">
-        <h1 style="text-align: center;"> Comment ça marche ?</h1>
-      </div>
-
-        <div class="row about-features" >
-
-            <div class="features-list block-1-4 block-m-1-2 block-mob-full group" style="margin-top:-150px; width:140%;">
-
-                <div class="bgrid feature" data-aos="fade-up"  style="margin-right:-8%;">
-
-                    <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone1.svg"></span>
-
-                    <div class="service-content" style="max-width: 250px;">
-
-                        <h3 style="text-align: center;"> JE CRÉE</h3>
-
-                        <p style="text-align: center;margin-top:-20px;">Je crée et personnalise <br> ma tirelire selon mes besoins.
-                        </p>
-
-                    </div>
-
-                    </div> <!-- /bgrid -->
-
-                    <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
-
-                      <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone2.svg"></span>
-
-                      <div class="service-content" style="max-width: 250px;">
-
-                          <h3 style="text-align: center;"> J'INVITE</h3>
-
-                          <p style="text-align: center;margin-top:-20px;">J'invite des amis <br> qui approuvent la configuration.
-                          </p>
-
-                      </div>
-
-                </div> <!-- /bgrid -->
-
-                <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
-
-                    <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone3.svg"></span>
-
-                    <div class="service-content" style="max-width: 250px;">
-
-                        <h3 style="text-align: center;"> ON COTISE</h3>
-
-                        <p style="text-align: center;margin-top:-20px;">Chacun contribue <br> le montant convenu.
-                        </p>
-
-                    </div>
-                </div> <!-- /bgrid -->
-
-                <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
-
-                    <span class="icon" style="margin-left:25%; margin-right:30%;"><img src="images/icone4.svg"></span>
-
-                    <div class="service-content" style="max-width: 250px;">
-
-                        <h3 style="text-align: center;"> ON DISTRIBUE</h3>
-
-                        <p style="text-align: center;margin-top:-20px;">L'argent est redistribué <br> à tour de rôle.
-                        </p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-      <section id="confiance">
-
-
-        <div style="background:white;">
-
-
-          <div class="row about-features" >
-
-
-                    <div style="padding-top:30px;">
-                      <h1 style="text-align: center;"> Ils nous font confiance : </h1>
-                    </div>
-
-              <div class="features-list block-1-3 block-m-1-2 block-mob-full group" style=" width:120%; margin-top:-6%;">
-
-                  <div class="bgrid feature" data-aos="fade-up"  style="margin-right:-8%;">
-
-                      <span class="icon" style="margin-left:25%; width:120%; margin-right:40%;"> <br/> <a href="https://finance-innovation.org/" target="_blank"/> <img src="images/conf1.svg" > </span>
-
-                      <div class="service-content" style="max-width: 250px;">
-
-                      </div>
-
-                      </div> <!-- /bgrid -->
-
-                      <div class="bgrid feature" data-aos="fade-up" style="margin-right:-13%; margin-left:5%;">
-
-                        <span class="icon" style="margin-left:25%; margin-right:30%;"> <a href="http://www.escpeurope.eu/home-escp-europe" target="_blank"/> <img src="images/conf2.svg">   </span>
-
-                        <div class="service-content" style="max-width: 250px;">
-
-                        </div>
-
-                  </div>
-
-                  <div class="bgrid feature" data-aos="fade-up" style="margin-right:-8%;">
-
-                      <span class="icon" style="margin-left:25%; margin-right:30%;"> <a href="https://www.blue-factory.eu/" target="_blank"/> <img src="images/conf3.svg" >  </span>
-
-                      <div class="service-content" style="max-width: 250px;">
-
-
-                      </div>
-                  </div>
-              </div>
-        </div>
-
-      </section>
-
     <div id="preloader">
-    	<div id="loader"></div>
+      <div id="loader"></div>
     </div>
 
     <!-- Java Script
