--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="overlay"></div>
 
     <div class="home-content">
-      
-      <div class="title-logo"> <img src="images/logo.svg" style="width:23%; margin-left:11%; margin-right:40%; margin-top:5%;"></div>
+
+      <div class="title-logo"> <img src="images/logo.svg" style=""></div>
 
       <div class="row contents">
         <div class="home-content-left" style="margin-top:-5%;">
@@ -152,11 +152,7 @@
     </div>
 
     <section id="confiance">
-
-
       <div style="background:white;">
-
-
         <div class="row about-features">
 
 
@@ -192,6 +188,7 @@
         </div>
 
     </section>
+
 
     <div id="preloader">
       <div id="loader"></div>
