--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="home-content">
 
-      <div class="title-logo"> <img src="images/logo.svg" style=""></div>
+      <div class="title-logo"> <img src="images/logo.png" style=""></div>
 
       <div class="row contents">
         <div class="home-content-left" style="margin-top:-5%;">
