--- a/index.html
+++ b/index.html
@@ -25,13 +25,33 @@
 
 <body id="top">
 
+ <header id="header" class="row">
+
+    <div class="header-logo">
+        <a href="index.html">Togethrust</a>
+    </div>
+
+    <nav id="header-nav-wrap">
+
+      <ul class="home-social-list" style="color: #0FACF3; height: 42px; width:2px;">
+        <li class="smoothscroll">  <a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li class="smoothscroll"> <a href="mailto:ngoma.tamio@gmail.com?Subject=Bonjour%20Togethrust" target="_blank"><i class="fa fa-envelope"></i></a></li>
+      </ul>
+  </nav>
+
+  <a class="header-menu-toggle" href="#"><span>Menu</span></a>
+
+ </header>
+
+
+
   <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
 
     <div class="overlay"></div>
 
     <div class="home-content">
 
-      <div class="title-logo"> <img src="images/logo.png" style=""></div>
+      <!-- <div class="title-logo"> <img src="images/logo.png" style=""></div> -->
 
       <div class="row contents">
         <div class="home-content-left" style="margin-top:-5%;">
@@ -45,8 +65,8 @@
                         en toute confiance.
                     </h1>
 
-          <div class="home-image-right" style="margin-right:30%; margin-left:60%; margin-top:10%; width:70%;">
-            <img src="images/iphone-app-470.png" srcset="images/iphone-app-470.png 1x, images/iphone-app-940.png 2x" data-aos="fade-up">
+          <div class="home-image-right" style="margin-right:30%; margin-left:60%; margin-top:5%; width:65%;">
+            <img src="images/iphone-app-470.png" srcset=" images/iphone-app-940.png" data-aos="fade-up">
           </div>
 
 
@@ -74,15 +94,7 @@
         </div>
       </div>
 
-      <ul class="home-social-list">
 
-        <li>
-          <a href="#"><i class="fa fa-instagram"></i></a>
-        </li>
-        <li>
-          <a href="mailto:ngoma.tamio@gmail.com?Subject=Bonjour%20Togethrust" target="_blank"><i class="fa fa-envelope"></i></a>
-        </li>
-      </ul>
 
   </section>
 
